RESOLVED FIXED51603
REGRESSION (r74648): XHR layout test failures
https://bugs.webkit.org/show_bug.cgi?id=51603
Summary REGRESSION (r74648): XHR layout test failures
mitz
Reported 2010-12-24 17:04:48 PST
After r74648, xmlhttprequest/logout.html is failing and xmlhttprequest/basic-auth-default.html is failing whe run interactively.
Attachments
Revert the shouldUseCredentialStorage() change from r74648 (1.60 KB, patch)
2010-12-24 17:21 PST, mitz
no flags
Revert r74648 (5.30 KB, patch)
2010-12-24 17:37 PST, mitz
ap: review+
mitz
Comment 1 2010-12-24 17:21:35 PST
Created attachment 77430 [details] Revert the shouldUseCredentialStorage() change from r74648
mitz
Comment 2 2010-12-24 17:30:05 PST
I am going to resolve this by reverting r74648.
Alexey Proskuryakov
Comment 3 2010-12-24 17:31:39 PST
Comment on attachment 77430 [details] Revert the shouldUseCredentialStorage() change from r74648 Hmm, does this also make connectionShouldUseCredentialStorage: return YES? If so, then the consequences are more profound than described in the ChangeLog.
mitz
Comment 4 2010-12-24 17:37:44 PST
mitz
Comment 5 2010-12-24 17:52:46 PST
Note You need to log in before you can comment on or make changes to this bug.