REGRESSION (r74648): XHR layout test failures https://bugs.webkit.org/show_bug.cgi?id=51603

Reviewed by Alexey Proskuryakov.

Reverted r74648.

WebCore:

* WebCore.exp.in:

WebKit2:

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::didReceiveAuthenticationChallenge):
* WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp:
(WebKit::WebFrameLoaderClient::shouldUseCredentialStorage):
* WebProcess/mac/WebProcessMainMac.mm:
(WebKit::WebProcessMain):



Canonical link: https://commits.webkit.org/64996@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74657 268f45cc-cd09-0410-ab3c-d52691b4dbfc